--- a/WarriorsTest/src/main/resources/application.yaml
+++ b/WarriorsTest/src/main/resources/application.yaml
@@ -14,10 +14,10 @@ spring:
     username: root
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         show_sql: true
   mvc:
